@@ -122,6 +122,13 @@ will use
 to send messages.
 .SH OPTIONS
 .TP 5
+.B \-a
+Output an indicator of what action or response is being sent.
+.TP 5
+.B \-A
+(Default.)
+Do not output any action or response indicators.
+.TP 5
 .B \-b
 (Default.)
 .B ezmlm-manage
